<resources>
    <string name="app_name">To Do Priority</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_new_task">Nova Tarefa</string>
    <string name="label_you_dont_have_none_tasks">Ops! Você não possui nenhuma tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_description">Descrição</string>
    <string name="label_create_task">Criar Tarefa</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="notification_channel_name">Task</string>
    <string name="notification_channel_description">Relembre sobre a sua tarefa</string>
    <string name="notification_text">Você tem um tarafe agendada! Bora ver como fazer isso?</string>

</resources>